[package]
name = "utxorpc"
version = "0.8.0"
edition = "2021"
description = "UTxO RPC SDK"
repository = "https://github.com/utxorpc/rust-sdk"
homepage = "https://github.com/utxorpc/rust-sdk"
documentation = "https://docs.rs/utxorpc"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
bytes = "1.6.1"
thiserror = "1.0.57"
tokio = "1.41.1"
tonic = { version = "0.12.3", features = ["tls-roots"] }
utxorpc-spec = { version = "0.14.0" }
# utxorpc-spec = { path = "../spec/gen/rust" }

[dev-dependencies]
hex = "0.4.3"
tokio = { version = "^1", features = ["full"] }
