[workspace]
members = [".", "utxorpc-tests"]
resolver = "2"

[package]
name = "utxorpc"
version = "0.13.0"
edition = "2021"
description = "UTxO RPC SDK"
repository = "https://github.com/utxorpc/rust-sdk"
homepage = "https://github.com/utxorpc/rust-sdk"
documentation = "https://docs.rs/utxorpc"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[dependencies]
bytes = "1.10.1"
thiserror = "2.0.12"
tokio = "1.46.1"
tonic = { version = "0.12.3", features = ["tls-roots"] }
utxorpc-spec = { version = "0.18.1" }
# utxorpc-spec = { path = "../spec/gen/rust" }

[dev-dependencies]
hex = "0.4"
tokio = { version = "1.46.1", features = ["full"] }

[workspace.metadata.release]
push = false
publish = false
pre-release-hook = [
    "git",
    "cliff",
    "-o",
    "CHANGELOG.md",
    "--tag",
    "{{version}}",
]
