[package]
name = "utxorpc-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
utxorpc = { path = ".." }
hex = "0.4.3"
tokio = { version = "1.46.1", features = ["full"] }
pallas-primitives = "0.33.0"
pallas-addresses = "0.33.0"
pallas-crypto = "0.33.0"
pallas-codec = "0.33.0"
pallas-txbuilder = "0.33.0"
pallas-wallet = "0.33.0"
bip39 = "2.2.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serial_test = "3.2.0"
